@@ -7,6 +7,7 @@ Makefile.PL
 lib/AnyEvent.pm
 lib/AnyEvent/Intro.pod
 lib/AnyEvent/Strict.pm
+lib/AnyEvent/Debug.pm
 lib/AnyEvent/DNS.pm
 lib/AnyEvent/Util.pm
 lib/AnyEvent/TLS.pm
